[project]
name = "lkml-feed-api"
version = "0.1.0"
description = "Lightweight SDK + REST API for lore.kernel.org mailing lists via NNTP"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.scripts]
lkml-feed-api = "lkml_feed_api.app:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
